# lumen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  install.sh  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  LAYERS.md  PROGRESS.md  ai-demosaic-todo.md
packaging/: lumen.desktop
src/: main.cpp
src/core/: AiDemosaic.cpp  AiDemosaic.h  AiModelStore.cpp  AiModelStore.h  Autosave.cpp  Autosave.h  BuiltinPresets.cpp  BuiltinPresets.h  ColorGradeNode.cpp  ColorGradeNode.h  ColorMixerNode.cpp  ColorMixerNode.h  CropState.cpp  CropState.h  Curve.cpp  Curve.h  CurvesNode.cpp  CurvesNode.h  DefringeNode.cpp  DefringeNode.h  DenoiseNode.cpp  DenoiseNode.h  Document.cpp  Document.h  EditGraph.cpp  EditGraph.h  EditNode.cpp  EditNode.h  GrainNode.cpp  GrainNode.h  GuidedFilter.cpp  GuidedFilter.h  HealNode.cpp  HealNode.h  Histogram.cpp  Histogram.h  Image.cpp  Image.h  ImageBuffer.cpp  ImageBuffer.h  (+39 more)
src/gpu/: CanvasWidget.cpp  CanvasWidget.h  ZoomMath.h
src/gpu/shaders/: present.frag  present.vert  texture.frag  texture.vert
src/input/: CommandPalette.cpp  CommandPalette.h  InputController.cpp  InputController.h
src/ui/: AdjustmentsPanel.cpp  AdjustmentsPanel.h  AppIcon.cpp  AppIcon.h  ColorGradePanel.cpp  ColorGradePanel.h  ColorMixerPanel.cpp  ColorMixerPanel.h  ColorWheel.cpp  ColorWheel.h  CropGizmo.cpp  CropGizmo.h  CropPanel.cpp  CropPanel.h  CurvesPanel.cpp  CurvesPanel.h  DefringePanel.cpp  DefringePanel.h  DenoisePanel.cpp  DenoisePanel.h  ExportDialog.cpp  ExportDialog.h  ExposurePanel.cpp  ExposurePanel.h  GrainPanel.cpp  GrainPanel.h  HealPanel.cpp  HealPanel.h  HistogramWidget.cpp  HistogramWidget.h  ImageOpenDialog.cpp  ImageOpenDialog.h  InfoPanel.cpp  InfoPanel.h  LayersPanel.cpp  LayersPanel.h  LensPanel.cpp  LensPanel.h  LooksPanel.cpp  LooksPanel.h  (+24 more)
tests/: aimodelstore_test.cpp  autosave_test.cpp  builtin_presets_test.cpp  colorgrade_test.cpp  colormixer_test.cpp  crop_test.cpp  curves_test.cpp  defringe_test.cpp  denoise_test.cpp  edit_graph_test.cpp  export_test.cpp  grain_test.cpp  guided_filter_test.cpp  heal_test.cpp  histogram_test.cpp  layer_undo_test.cpp  layers_test.cpp  lens_node_test.cpp  lut3d_test.cpp  lutnode_test.cpp  mask_test.cpp  mono_test.cpp  preset_test.cpp  presets_gui_smoke.cpp  project_test.cpp  raw_ai_button_smoke.cpp  raw_test.cpp  rawoptions_test.cpp  selective_test.cpp  sharpen_test.cpp  structure_test.cpp  tune_node_test.cpp  undo_test.cpp  vignette_test.cpp  whitebalance_test.cpp  zoom_test.cpp
